fixed alignments, add About Me section

--- a/css/main.css
+++ b/css/main.css
@@ -87,13 +87,6 @@ nav {
   width: 100%;
 }
 
-.portfolio > .heading {
-  font-size: 3rem;
-  margin-top: 5rem;
-  text-align: center;
-  color: white;
-}
-
 .portfolio-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -125,9 +118,20 @@ nav {
 }
 
 .about-me {
-  background-color: #f15bb5;
-  height: 50vh;
+  background-color: #f8a07b;
   width: 100%;
+  padding: 4rem 1rem;
+}
+
+.me-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 footer {
@@ -167,7 +171,7 @@ footer {
 .card {
   background-color: #5C5C5C;
   width: 20%;
-  margin: 8rem 2rem;
+  margin: 4rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -215,6 +219,21 @@ footer {
   width: 100%;
 }
 
+.heading {
+  font-size: 3rem;
+  margin-top: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.heading-white {
+  color: white;
+}
+
+.heading-black {
+  color: #424242;
+}
+
 .finding-kitty {
   width: 100%;
   height: 100%;
@@ -236,13 +255,13 @@ footer {
      object-fit: cover;
   -o-object-position: 0% 100%;
      object-position: 0% 100%;
-  padding-top: -3rem;
 }
 
 .game-card {
   background-color: #5C5C5C;
   width: 40rem;
   height: 30rem;
+  margin: 4rem 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -260,5 +279,59 @@ footer {
   border-radius: 3%;
   overflow: hidden;
   color: white;
+}
+
+.me {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 16rem;
+  text-align: center;
+  color: #424242;
+  font-size: 1.3rem;
+  font-weight: 900;
+}
+
+.profile-pic {
+  width: 14rem;
+  height: 15rem;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+}
+
+.skills-heading {
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  text-align: center;
+  text-transform: uppercase;
+  color: #424242;
+}
+
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 16rem;
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
