--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -35,7 +35,7 @@
 .card {
     background-color: #5C5C5C;
     width: 20%;
-    margin: 8rem 2rem;
+    margin: 4rem 2rem;
 
     display: flex;
     flex-direction: column;
@@ -76,7 +76,20 @@
     }
 }
 
+.heading {
+    font-size: 3rem;
+    margin-top: 2rem;
+    text-align: center;
+    text-transform: uppercase;
 
+    &-white {
+        color: white;
+    }
+
+    &-black {
+        color: #424242;
+    }
+}
 
 
 //////////////////////////////////////////
@@ -102,14 +115,13 @@
     max-height:100%;
     object-fit: cover;
     object-position: 0% 100%;
-
-    padding-top: -3rem;
 }
 
 .game-card {
     background-color: #5C5C5C;
     width: 40rem;
     height: 30rem;
+    margin: 4rem 2rem;
 
     display: flex;
     flex-direction: column;
@@ -122,6 +134,53 @@
     color: white;
     
 }
+
+
+//////////////////////////////////////////
+// Profile
+
+.me {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 16rem;
+    text-align: center;
+    
+    color: #424242;
+    font-size: 1.3rem;
+    font-weight: 900;
+}
+
+
+.profile-pic {
+    width: 14rem;
+    height: 15rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+
+.skills-heading {
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    text-align: center;
+    text-transform: uppercase;
+    color: #424242;
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 16rem;
+    text-align: center;
+}
+
+
+//////////////////////////////////////////
+
 
 
 //////////////////////////////////////////
